--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,168 @@
+version: 2
+jobs:
+  # build is a reserved job name for running circleci locally
+  build:
+    docker:
+      - image: circleci/node:9.3
+    working_directory: ~/project
+    steps:
+      - checkout
+      - <<: *get-yarn-cache
+      - run:
+          name: Test reporter status
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+            ./cc-test-reporter before-build
+      - run:
+          name: Install dependencies
+          command: yarn install
+      - <<: *save-yarn-cache
+      - run:
+          name: Lint source
+          command: yarn lint
+      - run:
+          name: Type check
+          command: yarn flow
+      - run:
+          name: Unit test
+          command: |
+            yarn test
+            ./cc-test-reporter after-build
+      - run:
+          name: Generate .env
+          command: node ./scripts/generate-dotenv.js
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+          - node_modules
+          - .env
+
+  alpha-android:
+    <<: *docker-android-job-defaults
+    environment:
+      <<: *docker-android-env
+      APK_PATH: "./app/build/outputs/apk/alpha/release/app-alpha-release.apk"
+    steps:
+      - <<: *docker-android-step-defaults
+      - <<: *android-dev-secrets
+      - run:
+          command: |
+            bundle exec fastlane alpha \
+            submit:true \
+            apk_path:$APK_PATH \
+            api_token:$HOCKEY_APP_TOKEN \
+            app_id:$HOCKEY_APP_ANDROID_ALPHA_APP_ID \
+            fabric_api_token:$FABRIC_API_KEY \
+            fabric_build_secret:$FABRIC_BUILD_SECRET \
+            fabric_groups:$FABRIC_GROUPS \
+            commit_sha:$CIRCLE_SHA1
+      - store_artifacts:
+          path: *android-artifacts-path
+
+  beta-android:
+    <<: *docker-android-job-defaults
+    environment:
+      <<: *docker-android-env
+      APK_PATH: "./app/build/outputs/apk/beta/release/app-beta-release.apk"
+    steps:
+      - <<: *docker-android-step-defaults
+      - <<: *android-dev-secrets
+      - run:
+          command: |
+            bundle exec fastlane beta \
+            submit:true \
+            apk_path:$APK_PATH \
+            api_token:$HOCKEY_APP_TOKEN \
+            app_id:$HOCKEY_APP_ANDROID_BETA_APP_ID \
+            fabric_api_token:$FABRIC_API_KEY \
+            fabric_build_secret:$FABRIC_BUILD_SECRET \
+            fabric_groups:$FABRIC_GROUPS \
+            commit_sha:$CIRCLE_SHA1
+      - store_artifacts:
+          path: *android-artifacts-path
+
+  release-android:
+    <<: *docker-android-job-defaults
+    environment:
+      <<: *docker-android-env
+      APK_PATH: "./app/build/outputs/apk/production/release/app-production-release.apk"
+    steps:
+      - <<: *docker-android-step-defaults
+      - <<: *android-release-secrets
+      - run:
+          command: |
+            bundle exec fastlane release \
+            submit:true \
+            apk_path:$APK_PATH \
+            upload_key:$PLAY_STORE_UPLOAD_KEY_PATH
+
+  alpha-ios:
+    <<: *mac-ios-job-defaults
+    steps:
+      - <<: *mac-ios-step-defaults
+      - run:
+          command: |
+            bundle exec fastlane alpha \
+            submit:true \
+            api_token:$HOCKEY_APP_TOKEN \
+            app_id:$HOCKEY_APP_IOS_ALPHA_APP_ID \
+            fabric_api_token:$FABRIC_API_KEY \
+            fabric_build_secret:$FABRIC_BUILD_SECRET \
+            fabric_groups:$FABRIC_GROUPS \
+            ci_build_num:$CIRCLE_BUILD_NUM \
+            commit_sha:$CIRCLE_SHA1
+      - store_artifacts:
+          path: *ios-artifacts-path
+
+  beta-ios:
+    <<: *mac-ios-job-defaults
+    steps:
+      - <<: *mac-ios-step-defaults
+      - run:
+          command: |
+            bundle exec fastlane beta \
+            submit:true \
+            api_token:$HOCKEY_APP_TOKEN \
+            app_id:$HOCKEY_APP_IOS_BETA_APP_ID \
+            fabric_api_token:$FABRIC_API_KEY \
+            fabric_build_secret:$FABRIC_BUILD_SECRET \
+            fabric_groups:$FABRIC_GROUPS \
+            ci_build_num:$CIRCLE_BUILD_NUM \
+            commit_sha:$CIRCLE_SHA1
+      - store_artifacts:
+          path: *ios-artifacts-path
+
+  release-ios:
+    <<: *mac-ios-job-defaults
+    steps:
+      - <<: *mac-ios-step-defaults
+      - run:
+          command: |
+            bundle exec fastlane release \
+            submit:true
+
+  e2e-ios:
+    <<: *mac-ios-job-defaults
+    steps:
+      - checkout:
+          path: /Users/distiller/project
+      - run:
+          name: Pre-start simulator
+          command: xcrun simctl boot "iPhone 7" || true
+
+      # Not using a workspace here as Node and Yarn versions
+      # differ between the macOS image and the Docker containers above.
+      - <<: *brew-depdendencies
+      - <<: *mac-ios-set-node-version
+      - run:
+          name: Install global yarn dependencies
+          command: |
+            yarn global add detox-cli
+            yarn global add react-native-cli
+      - <<: *osx-yarn-dependencies
+      - <<: *osx-generate-env
+      - run: yarn test:e2e
 yarn-key: &yarn-key
   v1-dependencies-{{ checksum "yarn.lock" }}
 yarn-osx-key: &yarn-osx-key
@@ -176,171 +341,6 @@ mac-ios-set-node-version: &mac-ios-set-node-version
       yarn global add n
       sudo n 9.3
 
-version: 2
-jobs:
-  # build is a reserved job name for running circleci locally
-  build:
-    docker:
-      - image: circleci/node:9.3
-    working_directory: ~/project
-    steps:
-      - checkout
-      - <<: *get-yarn-cache
-      - run:
-          name: Test reporter status
-          command: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod +x ./cc-test-reporter
-            ./cc-test-reporter before-build
-      - run:
-          name: Install dependencies
-          command: yarn install
-      - <<: *save-yarn-cache
-      - run:
-          name: Lint source
-          command: yarn lint
-      - run:
-          name: Type check
-          command: yarn flow
-      - run:
-          name: Unit test
-          command: |
-            yarn test
-            ./cc-test-reporter after-build
-      - run:
-          name: Generate .env
-          command: node ./scripts/generate-dotenv.js
-      - persist_to_workspace:
-          root: ~/project
-          paths:
-          - node_modules
-          - .env
-
-  alpha-android:
-    <<: *docker-android-job-defaults
-    environment:
-      <<: *docker-android-env
-      APK_PATH: "./app/build/outputs/apk/alpha/release/app-alpha-release.apk"
-    steps:
-      - <<: *docker-android-step-defaults
-      - <<: *android-dev-secrets
-      - run:
-          command: |
-            bundle exec fastlane alpha \
-            submit:true \
-            apk_path:$APK_PATH \
-            api_token:$HOCKEY_APP_TOKEN \
-            app_id:$HOCKEY_APP_ANDROID_ALPHA_APP_ID \
-            fabric_api_token:$FABRIC_API_KEY \
-            fabric_build_secret:$FABRIC_BUILD_SECRET \
-            fabric_groups:$FABRIC_GROUPS \
-            commit_sha:$CIRCLE_SHA1
-      - store_artifacts:
-          path: *android-artifacts-path
-
-  beta-android:
-    <<: *docker-android-job-defaults
-    environment:
-      <<: *docker-android-env
-      APK_PATH: "./app/build/outputs/apk/beta/release/app-beta-release.apk"
-    steps:
-      - <<: *docker-android-step-defaults
-      - <<: *android-dev-secrets
-      - run:
-          command: |
-            bundle exec fastlane beta \
-            submit:true \
-            apk_path:$APK_PATH \
-            api_token:$HOCKEY_APP_TOKEN \
-            app_id:$HOCKEY_APP_ANDROID_BETA_APP_ID \
-            fabric_api_token:$FABRIC_API_KEY \
-            fabric_build_secret:$FABRIC_BUILD_SECRET \
-            fabric_groups:$FABRIC_GROUPS \
-            commit_sha:$CIRCLE_SHA1
-      - store_artifacts:
-          path: *android-artifacts-path
-
-  release-android:
-    <<: *docker-android-job-defaults
-    environment:
-      <<: *docker-android-env
-      APK_PATH: "./app/build/outputs/apk/production/release/app-production-release.apk"
-    steps:
-      - <<: *docker-android-step-defaults
-      - <<: *android-release-secrets
-      - run:
-          command: |
-            bundle exec fastlane release \
-            submit:true \
-            apk_path:$APK_PATH \
-            upload_key:$PLAY_STORE_UPLOAD_KEY_PATH
-
-  alpha-ios:
-    <<: *mac-ios-job-defaults
-    steps:
-      - <<: *mac-ios-step-defaults
-      - run:
-          command: |
-            bundle exec fastlane alpha \
-            submit:true \
-            api_token:$HOCKEY_APP_TOKEN \
-            app_id:$HOCKEY_APP_IOS_ALPHA_APP_ID \
-            fabric_api_token:$FABRIC_API_KEY \
-            fabric_build_secret:$FABRIC_BUILD_SECRET \
-            fabric_groups:$FABRIC_GROUPS \
-            ci_build_num:$CIRCLE_BUILD_NUM \
-            commit_sha:$CIRCLE_SHA1
-      - store_artifacts:
-          path: *ios-artifacts-path
-
-  beta-ios:
-    <<: *mac-ios-job-defaults
-    steps:
-      - <<: *mac-ios-step-defaults
-      - run:
-          command: |
-            bundle exec fastlane beta \
-            submit:true \
-            api_token:$HOCKEY_APP_TOKEN \
-            app_id:$HOCKEY_APP_IOS_BETA_APP_ID \
-            fabric_api_token:$FABRIC_API_KEY \
-            fabric_build_secret:$FABRIC_BUILD_SECRET \
-            fabric_groups:$FABRIC_GROUPS \
-            ci_build_num:$CIRCLE_BUILD_NUM \
-            commit_sha:$CIRCLE_SHA1
-      - store_artifacts:
-          path: *ios-artifacts-path
-
-  release-ios:
-    <<: *mac-ios-job-defaults
-    steps:
-      - <<: *mac-ios-step-defaults
-      - run:
-          command: |
-            bundle exec fastlane release \
-            submit:true
-
-  e2e-ios:
-    <<: *mac-ios-job-defaults
-    steps:
-      - checkout:
-          path: /Users/distiller/project
-      - run:
-          name: Pre-start simulator
-          command: xcrun simctl boot "iPhone 7" || true
-
-      # Not using a workspace here as Node and Yarn versions
-      # differ between the macOS image and the Docker containers above.
-      - <<: *brew-depdendencies
-      - <<: *mac-ios-set-node-version
-      - run:
-          name: Install global npm dependencies
-          command: |
-            yarn global add detox-cli
-            yarn global add react-native-cli
-      - <<: *osx-yarn-dependencies
-      - <<: *osx-generate-env
-      - run: yarn test:e2e
 
 workflows:
   version: 2
